apps/payment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: casego-apps
  labels:
    app: payment
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: ghcr.io/sewaustav/casego-payment:main-17-95c915d386ac48dfaa89a2974d3cbd04d8b238c3 # {"$imagepolicy": "flux-system:casego-payment"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8085
            - name: grpc
              containerPort: 50052
          volumeMounts:
            - name: tls
              mountPath: /app/certs
              readOnly: true
          resources:
            requests:
              cpu: 30m
              memory: 64Mi
            limits:
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: tls
          secret:
            secretName: payment-server-tls
        - name: migrations
          emptyDir: {}
