apps/payment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: casego-apps
spec:
  selector:
    app: payment
  ports:
    - name: http
      port: 8085
      targetPort: http
    - name: grpc
      port: 50052
      targetPort: grpc
