apps/payment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment
  namespace: casego-apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - payment.111-88-158-206.nip.io
      secretName: payment-tls
  rules:
    - host: payment.111-88-158-206.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8085
